// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Starter Block when given custom data should render the block using the custom data 1`] = `
<block
  color={
    Object {
      "background": "yellow",
    }
  }
  text="Hello from props"
>
  <Component />
</block>
`;

exports[`The Starter Block when mounted with default data should match the snapshot 1`] = `
.div {
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol' !important;
  font-size: 16px !important;
  color: #333 !important;
  background-color: transparent !important;
}

.button-hover {
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol' !important;
  background-color: #fff !important;
  border-color: #343538 !important;
  color: #343538 !important;
}

.button-hover:hover {
  background-color: #343538 !important;
  border-color: #343538 !important;
  color: #fff !important;
  text-decoration: none !important;
  -webkit-transition: all 0.2s ease-in-out !important;
  -moz-transition: all 0.2s ease-in-out !important;
  transition: all 0.2s ease-in-out !important;
}

<bound createElementWithValidation>
  <block
    color={
      Object {
        "background": "transparent",
      }
    }
    text="Default prop"
  >
    <div
      className="div"
    >
      Default prop
       
      <component
        onClick={[Function]}
      >
        <a
          className="tc link dib pointer ttu ba bw1 f6 ph3 pv2 br1  button-hover"
          onClick={[Function]}
        >
          Click me 
          0
           
        </a>
      </component>
    </div>
  </block>
</bound createElementWithValidation>
`;

exports[`The Starter Block when there is no custom data should render the block with the default content 1`] = `
<block
  color={
    Object {
      "background": "transparent",
    }
  }
  text="Default prop"
>
  <Component />
</block>
`;
